Filter out invalid recurrence frequency options (Java 8 compatible)